:bug: high contrast text in footer

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -43,7 +43,7 @@ footer[role="contentinfo"] {
 
   .colophon {
     text-align: center;
-    color: #666;
+    color: #aaa;
 
     @media (min-width: 400px) {
       text-align: left;
